test/negative/CyclicInterfaces/B.java
package B;
import A.A;
public interface B extends A {
}
